# mini-db

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/kv/: crc32.cpp  crc32.h  endian.h  kvstore.cpp  kvstore.h  log_segment.cpp  log_segment.h  win_file.cpp  win_file.h
